// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`synthetix-debt-pool debt successfully fetches the current debt size of the synthetix debt cache across "mainnet" and "mainnet-ovm" if chainSources is missing 1`] = `
Object {
  "data": Object {
    "result": "313273658056626393719587417",
  },
  "jobRunID": 1,
  "result": "313273658056626393719587417",
  "statusCode": 200,
}
`;

exports[`synthetix-debt-pool debt successfully fetches the current debt size of the synthetix debt cache for only one chain 1`] = `
Object {
  "data": Object {
    "result": "274504021465419663278269593",
  },
  "jobRunID": 1,
  "result": "274504021465419663278269593",
  "statusCode": 200,
}
`;

exports[`synthetix-debt-pool debt-ratio successfully fetches the debt ratio across all chains if chainSources is missing 1`] = `
Object {
  "data": Object {
    "result": "1238571593661276745783695103",
  },
  "jobRunID": 1,
  "result": "1238571593661276745783695103",
  "statusCode": 200,
}
`;

exports[`synthetix-debt-pool debt-ratio successfully fetches the debt ratio for only one chain 1`] = `
Object {
  "data": Object {
    "result": "1279602875189552479134253351",
  },
  "jobRunID": 1,
  "result": "1279602875189552479134253351",
  "statusCode": 200,
}
`;

exports[`synthetix-debt-pool errors throws an error if the request contains a source without a chain configuration 1`] = `
Object {
  "error": Object {
    "feedID": "{\\"data\\":{\\"chainSources\\":[\\"kovan\\"]}}",
    "message": "Chain kovan not configured",
    "name": "AdapterError",
  },
  "jobRunID": 1,
  "status": "errored",
  "statusCode": 500,
}
`;

exports[`synthetix-debt-pool errors throws an error if the request contains a source without a chain configuration 2`] = `
Object {
  "error": Object {
    "feedID": "{\\"data\\":{\\"chainSources\\":[\\"kovan\\"],\\"endpoint\\":\\"debt-ratio\\"}}",
    "message": "Chain kovan not configured",
    "name": "AdapterError",
  },
  "jobRunID": 1,
  "status": "errored",
  "statusCode": 500,
}
`;
